@startuml

class Hopital {
    +id_hop: int
    +nom_hop: String
    +adresse: String
}

class Personne {
    +id_per: int
    +nom_per: String
    +prenom: String
    +naissance: DateTime
}

class Personnel {
    +embauche: DateTime
    +finContrat: DateTime
    +salaire: int
}

class Medecin {
  +specialite: String
}

class Infirmier {
  +service: String
}

class AgentEntretient {
}

class Administratif {
  +service: String
}

class Patient {
  +antecedentsMedicaux: String
  +raisonAccueil: String
  +dateEntree: Date
  +dateSortiePrevisionnelle: Date
  +dateSortieReelle: Date
}

class VisiteMedicale {
  +id_vis: int
  +date: Date
  +examens: String
  +commentaires: String
  +medecin: Medecin
  +patient: Patient
}

class CompteRendu {
  +id_com: int
  +date: Date
  +examens: String
  +commentaires: String
  +visite: VisiteMedicale
}

class Soin {
  +id_soi: int
  +dateHeure: DateTime
  +description: String
  +medicaments: String
  +quantite: int
  +infirmier: Infirmier
  +patient: Patient
}

class Reunion {
  +id_reu: int
  +dateHeure: DateTime
  +participants: List<Personnel>
  +soinsDecides: List<Soin>
}

class Service {
  +id_ser: int
  +nom_ser: String
  +responsableAdministratif: Administratif
  +medecinReferent: Medecin
}

class Chambre {
  +numero: int
  +etage: int
  +capacite: int
  +service: Service
  +lits: List<Lit>
}

class Lit {
  +id_lit: int
  +numero: int
  +occupant: Patient
  +dateDernierAgentEntretient: Date
  +nettoyeur: AgentEntretient
}

'/* ------------------------------ Relations ----------------------------------------------------*/

Hopital <|-- Service : "relatif à"

Personne <|-- Personnel : "role"
Personne <|-- Patient : "role"

Personnel <|-- Medecin
Personnel <|-- Infirmier
Personnel <|-- AgentEntretient
Personnel <|-- Administratif


Hopital "1" -- "0..*" Personnel : "emploi" 

Medecin "1" -- "0..*" VisiteMedicale : "réalise"
VisiteMedicale "1" -- "1" CompteRendu : "produit"
VisiteMedicale "1" -- "1" Patient : "pour"

Infirmier "1" -- "0..*" Soin : "délivre"
Soin "1" -- "1" Patient : "à"

Reunion "1" -- "0..*" Soin : "décide"
Reunion "1" -- "0..*" Personnel : "participants"

Service "1" -- "0..*" Chambre : "contient"
Chambre "1" -- "2..6" Lit : "contient"
Lit "1" -- "0..1" Patient : "occupé par"

Service "1" -- "1" Administratif : "responsable"
Service "1" -- "1" Medecin : "référent"

@enduml
